# WheelMenu

./: CMakeLists.txt  GridPage.qml  LICENSE  OnlyItemPage.qml  README.md  SecondaryPage.qml  WheelMenuButton.qml  WheelMenuView.qml  conf.xml  main.cpp  main.qml  wheelMenuModel.cpp  wheelMenuModel.h
qml/: GridPage.qml  OnlyItemPage.qml  TableButton.qml  WheelMenuButton.qml  WheelMenuView.qml
src/: fileSaver.cpp  fileSaver.h  wheelMenuModel.cpp  wheelMenuModel.h
